# rsflow

./: .gitignore  Cargo.toml  TODO.md
data/: flow.json
flow-admin/: index.html  package-lock.json  package.json  vite.config.js
flow-admin/src/: App.vue
flow-admin/src/components/: TestComponent.vue
flow-admin/src/styles/: _base.scss  _components.scss  _layout.scss  _variables.scss  main.scss
flow-admin/src/views/: FlowDesignView.vue  HomeView.vue
flow-nodes/: Cargo.toml
flow-nodes/inject/: Cargo.toml
flow-nodes/inject/src/: lib.rs
flow-nodes/log/: Cargo.toml
flow-nodes/log/src/: lib.rs
flow-nodes/net/: Cargo.toml
flow-nodes/net/src/: http_in.rs  http_out.rs  lib.rs
flow-nodes/shell/: Cargo.toml
flow-nodes/shell/src/: lib.rs
flow-nodes/src/: lib.rs
flow-runtime/: Cargo.toml  README.md
flow-runtime/rsflow-core/src/: lib.rs
flow-runtime/src/: auto_node_registry.rs  main.rs
flow-runtime/src/nodes/: inject.rs  log.rs  mod.rs  shell.rs
flow-server/: Cargo.toml  build.rs
flow-server/data/: flow.json
flow-server/rsflow-core/: Cargo.toml
flow-server/rsflow-core/src/: lib.rs
flow-server/src/: main.rs
flow-server/src/nodes/: inject.rs  log.rs  (+2 more)
rsflow-admin/src/: main.js
rsflow-nodes/: Cargo.toml
rsflow-nodes/inject/: Cargo.toml
rsflow-nodes/log/: Cargo.toml
rsflow-nodes/net/: Cargo.toml
rsflow-nodes/shell/: Cargo.toml
rsflow-nodes/src/: lib.rs
rsflow-runtime/: Cargo.toml
rsflow-runtime/rsflow-core/: Cargo.toml
rsflow-runtime/rsflow-net/: Cargo.toml
rsflow-runtime/src/: main.rs
rsflow-server/: package.json
(+50 files in other folders)
